--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -8,6 +8,7 @@
 
 <div class="text-center">
     <a class="btn btn-primary" href="/register/{{event_id}}">Register</a>
+    <a class="btn btn-default" href="/">Home</a>
 </div>
 
 <div>
