--- a/root/templates/layout.html
+++ b/root/templates/layout.html
@@ -31,33 +31,27 @@
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right control-nav">
-                        <li><button class="btn btn-success" onclick="location.href='/create';"><span class="glyphicon glyphicon-plus"></span></button></li>
-                        
                         {% if request.user.id %}
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ request.user }}<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/setting">Setting</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="/logout">Log out</a></li>
-                            </ul>
-                        </li>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ request.user }}<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/setting">Setting</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="/logout">Log out</a></li>
+                                </ul>
+                            </li>
                         {% else %}
-                        <li>
-                            <button class="btn btn-primary" onclick="location.href='/signup';">Sign Up</span></button>
-                        </li>
-                        <li>
-                            <button class="btn btn-default" onclick="location.href='/login';">Log In</span></button>
-                        </li>
+                            <li><button class="btn btn-default" onclick="location.href='/login';">Log In</span></button></li>
+                            <li><button class="btn-signup" onclick="location.href='/signup';">Sign Up</span></button></li>
                         {% endif %}
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="container">
-            {% block content %}
-            {% endblock %}
-        </div>
+        <!--<div class="container">-->
+        {% block content %}
+        {% endblock %}
+        <!--</div>-->
     </body>
 </html>
