--- a/root/templates/login.html
+++ b/root/templates/login.html
@@ -3,16 +3,17 @@
 <div class="short-panel">
     <form action="" method="POST">
         {% csrf_token %}
+
         <div class="form-group">
-            <label for="usr">Name:</label>
-            <input class="form-control" name="username" type="username" placeholder="user name">
+            <input class="form-control" name="username" type="username" placeholder="Username">
         </div>
+        
         <div class="form-group">
-            <label for="pwd">Password:</label>
-            <input class="form-control" name="password" type="password" placeholder="password"/>
+            <input class="form-control" name="password" type="password" placeholder="Password"/>
         </div>
-        <div class="text-center">
-            <button class="btn btn-primary">Log In</button>
+
+        <div class="text-center form-group">
+            <button class="btn-signup">Log In</button>
         </div>
     </form>
 </div>
