Adding template for org view.

--- a/root/templates/orgsignup.html
+++ b/root/templates/orgsignup.html
@@ -16,7 +16,11 @@
         </div>
 
         <div class="form-group">
-            <input class="form-control" name="full-name" type="text" placeholder="Full name*">
+            <input class="form-control" name="email" type="email" placeholder="Email*">
+        </div>
+
+        <div class="form-group">
+            <input class="form-control" name="full-name" type="text" placeholder="First name last name*">
         </div>
 
         <div class="form-group">
@@ -24,11 +28,11 @@
         </div>
 
         <div class="form-group">
-            <input class="form-control" name="address" type="address" placeholder="Address"/>
+            <input class="form-control" name="club-address" type="address" placeholder="Address"/>
         </div>
 
         <div class="form-group">
-            <input class="form-control" name="phone" type="phone" placeholder="Phone number"/>
+            <input class="form-control" name="club-phone" type="phone" placeholder="Phone number"/>
         </div>
 
         <div class="text-center form-group">
