--- a/root/templates/signup.html
+++ b/root/templates/signup.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="form-group">
-            <input class="form-control" name="full-name" type="text" placeholder="Full name">
+            <input class="form-control" name="full-name" type="text" placeholder="First name last name">
         </div>
 
         <div class="form-group">
