--- a/root/templates/create.html
+++ b/root/templates/create.html
@@ -1,33 +1,42 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="" method="POST">
-    {% csrf_token %}
-    <h1>Create a new event</h1>
-    <div class="form-group">
-        <label>Event name:</label>
-        <input class="form-control" name="event_name" type="text" placeholder="Local tournament">
-    </div>
-    <div class="form-group">
-        <label>Description:</label>
-        <textarea class="form-control" name="event_desc" rows="7" type="text" placeholder="Fundraiser event for ABC organization"/></textarea>
-    </div>
-    <div class="form-group">
-        <label>Location:</label>
-        <input class="form-control" name="event_loc" type="text" placeholder="Royal Golf Club"/>
-    </div>
-    <div class="form-group">
-        <label>Date:</label>
-        <input class="form-control" name="event_date" type="datetime-local" data-format="dd/MM/yyyy hh:mm:ss"/>
-    </div>
-    <div class="text-center">
-        <button class="btn btn-primary">Create</button>
-    </div>
-</form>
+<div class="create-view">
+    <form action="" method="POST">
+        {% csrf_token %}
+        <h1>Create a new event</h1>
 
-{% if created %}
-    <div class="alert alert-success" role="alert">Event created successfully.</div>
-{% elif failed %}
-    <div class="alert alert-danger" role="alert">Failed to create event.</div>
-{% endif %}
-
+        {% if created %}
+            <div class="alert alert-success" role="alert">Event created successfully.</div>
+        {% elif failed %}
+            <div class="alert alert-danger" role="alert">Failed to create event.</div>
+        {% endif %}
+        
+        <div class="form-group">
+            <label>Event name:</label>
+            <input class="form-control" name="event_name" type="text" placeholder="Local tournament">
+        </div>
+        <div class="form-group">
+            <label>Description:</label>
+            <textarea class="form-control" name="event_desc" rows="7" type="text" placeholder="Fundraiser event for ABC organization"/></textarea>
+        </div>
+        <div class="form-group">
+            <label>Location:</label>
+            <input class="form-control" name="event_loc" type="text" placeholder="Royal Golf Club"/>
+        </div>
+        <div class="form-group">
+            <label>Date &amp; time:</label>
+            <input class="form-control" name="event_date" type="datetime-local" data-format="dd/MM/yyyy hh:mm:ss"/>
+        </div>
+        <div class="form-group">
+            <label>Private Event?</label>
+            <select class="form-control" name="event_private">
+                <option>No</option>
+                <option>Yes</option>
+            </select>
+        </div>
+        <div class="text-center">
+            <button class="btn btn-primary">Create</button>
+        </div>
+    </form>
+</div>
 {% endblock %}
