Allows user to register for event. Have not tested thoroughly.

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -112,6 +112,14 @@ button:focus {
     padding: 50px 15% 0 15%;
 }
 
+/* Event View */
+.events-detail-view {
+    padding: 50px 15% 0 15%;
+}
+.participants-table {
+    margin-top: 20px;
+}
+
 /* Org view */
 .org-view{
     padding: 50px;
