--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -1,27 +1,33 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<h1>{{ event_name }}</h1>
-<h4>{{ event_loc }}</h4>
-<h6>{{ event_date }}</h6>
-<p>{{ event_desc }}</p>
 
-<div class="text-center">
-    <a class="btn btn-primary" href="/register/{{event_id}}">Register</a>
-    <a class="btn btn-default" href="/">Home</a>
+<div class="events-detail-view">
+    <h1>{{ event_name }}</h1>
+    <h4>{{ event_loc }}</h4>
+    <h6>{{ event_date }}</h6>
+    <p>{{ event_desc }}</p>
+
+    <div class="text-center">
+        {% if not org_status %}
+            <a class="btn btn-primary" href="/clubs/{{org_id}}/events/{{event_id}}/register">Register</a>
+        {% elif unregister %}
+            <a class="btn btn-primary" href="/clubs/{{org_id}}/events/{{event_id}}/unregister">Unregister</a>
+        {% endif %}
+        <a class="btn btn-default" href="/">Home</a>
+    </div>
+
+    <div class="">
+        {% if participants and org_status %}
+            <p>{{ participants|length }} person(s) registered for this event:</p>
+            <table class="participants-table table table-striped table-hover">
+                {% for p in participants %}
+                    <tr class="">
+                        <td>{{ p.username }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        {% endif %}
+    </div>
 </div>
-
-<div>
-    {% if participants %}
-    <p>{{ participants|length }} person(s) registered for this event:</p>
-    <table class="table">
-        {% for p in participants %}
-            <tr class="">
-                <td>{{ p.username }}</td>
-            </tr>
-        {% endfor %}
-    </table>
-    {% endif %}
-</div>
-
 {% endblock %}
