--- a/root/templates/org.html
+++ b/root/templates/org.html
@@ -25,7 +25,7 @@
             {% endif %}
         </tr>
         {% for event in events %}
-            <tr>
+            <tr onclick="location.href='/clubs/{{request.user.username}}/events/{{event.id}}';">
                 <td>{{event.name}}</td>
                 <td>{{event.description}}</td>
                 <td>{{event.location}}</td>
