--- a/root/templates/layout.html
+++ b/root/templates/layout.html
@@ -35,8 +35,8 @@
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ request.user }}<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/setting">Setting</a></li>
-                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="{{dashboard_url}}">Dashboard</a></li>
+                                    <li><a class="disabled" href="">Setting</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="/logout">Log out</a></li>
                                 </ul>
