--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -143,8 +143,8 @@ div, h1, p {
 }
 .org-metadata, .org-control-center {
     border: #ff5050 3px dashed;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 20px;
+    padding: 10px;
 }
 .org-metadata h1 {
     margin: 0;
@@ -153,20 +153,24 @@ div, h1, p {
     vertical-align: top;
     width: 100px;
     height: 100px;
-    margin: 0 20px 20px 0;
+    margin: 0;
     position: relative;
     display: inline-block;
 }
 .org-avatar img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100px;
+    height: 100px;
 }
 .org-change-avatar {
     position: absolute;
     width: 100%;
     top: 80px;
-    background-color: black;
+    color: white;
+    background-color: white;
     text-align: center;
+}
+.org-change-avatar input {
+    width: 100px;
 }
 .org-change-avatar a  {
     color: white !important;
