--- a/root/templates/org.html
+++ b/root/templates/org.html
@@ -8,9 +8,6 @@
             <h1>{{ club_name }}</h1>
             <div class="org-avatar">
                 <img src="http://www.logomyway.com/marketPlace/GufoADVerso_3277/GOLF1.jpg"/>
-                {% if org_status %}
-                    <div class="org-change-avatar"><a>change</a></div>
-                {% endif %}
             </div>
             <div class="org-info">
                 <h4>{{ club_address }}</h4>
@@ -22,8 +19,13 @@
         </div>
         
         {% if org_status %}
-            <div class="org-control-center col-sm-12 col-md-3">
+            <div class="org-control-center col-sm-12 col-md-5">
                 <button class="btn btn-primary" onclick="location.href='/clubs/{{request.user.username}}/create';">New Event</button>
+                <button class="btn btn-primary">Change Logo</button>
+                <button class="btn btn-primary">Update Info</button>
+                {% if False and org_status %}
+                    <div class="org-change-avatar"><input value="change" type="file"/></div>
+                {% endif %}
             </div>
         {% endif %}
     </div>
