--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -128,6 +128,12 @@ div, h1, p {
 .participants-table {
     margin-top: 20px;
 }
+.private-event {
+    font-size: 15px;
+    font-weight: 700;
+    margin-left: 15px;
+    font-style: italic;
+}
 
 /* Org view */
 .org-view{
