--- a/root/templates/layout.html
+++ b/root/templates/layout.html
@@ -5,9 +5,11 @@
         <link type="text/css" rel="stylesheet" href="/static/css/style.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="/static/css/bootstrap/dist/css/bootstrap.min.css"  media="screen,projection"/>
         <link rel="stylesheet" type="text/css" href="/static/js/datatable/media/css/jquery.dataTables.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script type="text/javascript" src="/static/css/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script type="text/javascript" charset="utf8" src="/static/js/datatable/media/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" src="/static/js/datatable/media/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
