--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -144,6 +144,7 @@ ul {
     font-family: FontAwesome;
     content: "\f047";
     margin-right: 5px;
+    font-size: 10px;
 }
 .player-list li {
     background-color: #f3f3fe;
