--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -22,14 +22,14 @@
 
     {% if participants and org_status %}
         <p>{{ participants|length }} person(s) registered for this event:</p>
-        <form>
-            <ul class="player-list" id="sortable">
-                {% for p in participants %}
-                    <li class="sortedPlayer">{{ p.username }}</li>
-                {% endfor %}
-            </ul>
-            <a id="sortedPlayersList" class="btn btn-primary">Rearrage</a>
-        </form>
+        <ul class="player-list" id="sortable">
+            {% for p in participants %}
+                <li class="sortedPlayer">{{ p.username }}</li>
+            {% endfor %}
+        </ul>
+        <div class="text-center">
+            <a id="sortedPlayersList" class="btn btn-primary">Save Current Order</a>
+        </div>
     {% endif %}
 
 </div>
