--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -32,7 +32,7 @@ ul {
     width: 100%;
     height: 90%;
     background-image: url("../img/bg.jpg");
-    background-size: cover;
+    background-size: 100% 100%;
     text-align: center;
     position: fixed;
 }
