--- a/root/templates/create.html
+++ b/root/templates/create.html
@@ -35,7 +35,8 @@
             </select>
         </div>
         <div class="text-center">
-            <button class="btn btn-primary">Create</button>
+            <button type="submit" class="btn btn-primary">Create</button>
+            <a href="/clubs/{{org_id}}" class="btn btn-default">Back</a>
         </div>
     </form>
 </div>
