--- a/root/templates/orgedit.html
+++ b/root/templates/orgedit.html
@@ -13,15 +13,15 @@
         
         <div class="form-group">
             <label>Event name:</label>
-            <input class="form-control" name="event_name" type="text" placeholder="{{event.name}}">
+            <input class="form-control" name="event_name" type="text" value="{{event.name}}">
         </div>
         <div class="form-group">
             <label>Description:</label>
-            <textarea class="form-control" name="event_desc" rows="7" type="text" placeholder="{{event.description}}"/></textarea>
+            <textarea class="form-control" name="event_desc" rows="7" type="text" value="{{event.description}}"/></textarea>
         </div>
         <div class="form-group">
             <label>Location:</label>
-            <input class="form-control" name="event_loc" type="text" placeholder="{{event.location}}"/>
+            <input class="form-control" name="event_loc" type="text" value="{{event.location}}"/>
         </div>
         <div class="form-group">
             <label>Date:</label>
