--- a/root/templates/org.html
+++ b/root/templates/org.html
@@ -6,7 +6,17 @@
         <div class="org-metadata col-sm-12 col-md-6">
             <h1>{{ club_name }}</h1>
             <div class="org-avatar">
-                <img src="http://www.logomyway.com/marketPlace/GufoADVerso_3277/GOLF1.jpg"/>
+                {% if club_logo %}
+                    <img src="/static/img/logos/{{club_logo}}"/>
+                {% else %}
+                    <img src="/static/img/logos/default.jpg"/>
+                {% endif %}
+                <form id="change-logo-form" class="dropzone org-change-avatar" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <input type="file" name="uploaded_file" class="dragdrop" id="change-logo-input"/>
+                    </div>
+                </form>
             </div>
             <div class="org-info">
                 <h4>{{ club_address }}</h4>
@@ -20,14 +30,16 @@
         {% if org_status %}
             <div class="org-control-center col-sm-12 col-md-5">
                 <button class="btn btn-primary" onclick="location.href='/clubs/{{org_id}}/create';">New Event</button>
-                <button class="btn btn-primary">Change Logo</button>
                 <a href="update" class="btn btn-primary">Update Info</a>
-                {% if False and org_status %}
-                    <div class="org-change-avatar"><input value="change" type="file"/></div>
-                {% endif %}
             </div>
         {% endif %}
     </div>
+
+    {% if oversize %}
+        <div class="alert alert-danger">
+            <p>Please only use files 5Mb or smaller.</p>
+        </div>
+    {% endif %}
 
     <table class="events-table table table-striped table-hover">
         <tr>
@@ -54,4 +66,11 @@
         {% endfor %}
     </table>
 </div>
+<script>
+    $(function() {
+        $("#change-logo-input").change(function() {
+            $("#change-logo-form").submit();
+        });
+    });
+</script>
 {% endblock %}
