--- a/root/templates/org.html
+++ b/root/templates/org.html
@@ -11,11 +11,12 @@
                 {% else %}
                     <img src="/static/img/logos/default.jpg"/>
                 {% endif %}
-                
+
                 <form id="change-logo-form" class="dropzone org-change-avatar" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-group">
                         <input type="file" name="uploaded_file" class="dragdrop" id="change-logo-input"/>
+                        <input type="submit" name="change_logo" value="Change" id="change-logo-input-show"/>
                     </div>
                 </form>
             </div>
@@ -29,12 +30,25 @@
         </div>
         
         {% if org_status %}
-            <div class="org-control-center col-sm-12 col-md-5">
-                <button class="btn btn-primary" onclick="location.href='/clubs/{{org_id}}/create';">New Event</button>
-                <a href="update" class="btn btn-primary">Update Info</a>
+            <div class="col-sm-12 col-md-5">
+                <div class="org-control-center">
+                    <button class="btn btn-primary" onclick="location.href='/clubs/{{org_id}}/create';">New Event</button>
+                    <a href="update" class="btn btn-primary">Update Info</a>
+                </div>
+                <div class="org-control-center">
+                    <form id="change-logo-form" class="dropzone org-change-avatar" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="message_subject" placeholder="Subject"/>
+                            <textarea class="form-control" row="5" name="message_body" placeholder="Send a message to everyone who has signed up for at least 1 event."></textarea>
+                            <input type="submit" class="btn btn-primary" name="blast_emails" value="Blast Email"/>
+                        </div>
+                    </form>
+                </div>
             </div>
         {% endif %}
     </div>
+
 
     {% if oversize %}
         <div class="alert alert-danger">
@@ -70,7 +84,8 @@
 <script>
     $(function() {
         $("#change-logo-input").change(function() {
-            $("#change-logo-form").submit();
+            $("#change-logo-input-show").show();
+            $("#change-logo-input").hide();
         });
     });
 </script>
