--- a/root/templates/event.html
+++ b/root/templates/event.html
@@ -20,18 +20,35 @@
         <a class="btn btn-default" href="/">Home</a>
     </div>
 
-    {% if participants and org_status %}
-        <p>{{ participants|length }} person(s) registered for this event:</p>
-        <ul class="player-list" id="sortable">
-            {% for p in participants %}
-                <li class="sortedPlayer">{{ p.username }}</li>
-            {% endfor %}
-        </ul>
-        <div class="text-center">
-            <a id="sortedPlayersList" class="btn btn-primary">Save Current Order</a>
+    {% if org_status %}
+        {% if participants %}
+            <p>{{ participants|length }} person(s) registered for this event:</p>
+            <ul class="player-list" id="sortable">
+                {% for p in participants %}
+                    <li class="sortedPlayer">{{ p.username }}</li>
+                {% endfor %}
+            </ul>
+            <div class="text-center">
+                <a id="sortedPlayersList" class="btn btn-primary">Save Current Order</a>
+            </div>
+        {% endif %}
+        <div class="org-shadow event-email-blast">
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-group">
+                    <input type="text" class="form-control" name="message_subject" placeholder="Subject"/>
+                    <textarea class="form-control" row="5" name="message_body" placeholder="Send a message to those who signed up."></textarea>
+                    <input type="submit" class="btn btn-primary" name="blast_emails" value="Blast Email"/>
+                </div>
+            </form>
         </div>
     {% endif %}
-
+    
+    {% if email_blast_success %}
+        <div class="alert alert-success">
+            <p>Emails sent!</p>
+        </div>
+    {% endif %}
 </div>
 <script>
     $(function() {
